Make Google Fonts HTTPS, fix cross platform bug
Addresses some font weirdness that might be relevant to #440,#706,#733, and #734

Improve cross browser rendering

Remove some padding from elements because it affects reflow, change the limit for elements getting near edge of page, modify the way in which extra padding is applied to elements in order to create touch targets

Make items tappable again

--- a/src/components/basic-element/basic-element.less
+++ b/src/components/basic-element/basic-element.less
@@ -1,12 +1,13 @@
 .el-container {
   position: absolute;
   height: 1px;
-  width: 1px;
+  width: 100%;
   left: 50%;
   top: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: -50%;
 
   .icon {
     position: relative;
@@ -28,7 +29,6 @@
 .el {
   flex-shrink: 0;
 
-  padding: 10px;
   user-select: none;
 
   position: relative;
@@ -57,13 +57,12 @@
 */
 
 .el {
-
+  box-sizing: content-box;
   // Text
   &.el-text {
     max-width: 320px;
     p {
       margin: 0;
-      padding: 0 10px;
     }
   }
 
@@ -83,12 +82,5 @@
       display: block;
       max-width: 300px;
     }
-  }
-}
-
-// Slightly hacky: this improves rendering consistency x-browser
-#map.play {
-  .el.el-text p {
-    width: 320px;
   }
 }
